Fix: show mute button if no seekbar (collapsed)

--- a/packages/viewer/src/styles/partials/playback-controls.module.scss
+++ b/packages/viewer/src/styles/partials/playback-controls.module.scss
@@ -73,7 +73,7 @@
         pointer-events: auto;
     }
 
-    .withMute.isCollapsed & {
+    .withSeekBar.withMute.isCollapsed & {
         opacity: 0.25;
     }
     .withMute.isCollapsed.isMuted & {
